--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "server.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node server.js"
+        "start": "node server.js",
+        "dev": "node ./src/server.js"
     },
     "repository": {
         "type": "git",
@@ -21,6 +22,7 @@
     },
     "homepage": "https://github.com/tranducmanh235/backend-zero#readme",
     "dependencies": {
+        "ejs": "3.1.8",
         "express": "4.18.2"
     }
 }
