--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node server.js",
-        "dev": "node ./src/server.js"
+        "dev": "nodemon ./src/server.js"
     },
     "repository": {
         "type": "git",
@@ -25,5 +25,8 @@
         "dotenv": "16.0.3",
         "ejs": "3.1.8",
         "express": "4.18.2"
+    },
+    "devDependencies": {
+        "nodemon": "2.0.20"
     }
 }
